# mobile_aloha_pingpong

./: .gitignore  README.md  arm_data.pkl  conversion.py  det_data.pkl  mpc_data.pkl  mpc_run_20260325_203249_0.mcap  pred_data.pkl  split_ball_pos_runs.py  traj.npz
assets/: aloha.urdf
rosbag2_2026_03_26-03_00_27/: metadata.yaml  rosbag2_2026_03_26-03_00_27_0.mcap
rosbag2_2026_03_26-03_07_53/: metadata.yaml  rosbag2_2026_03_26-03_07_53_0.mcap
rosbag2_2026_03_26-03_11_42/: metadata.yaml  rosbag2_2026_03_26-03_11_42_0.mcap
rosbag2_2026_03_26-03_18_17/: metadata.yaml  rosbag2_2026_03_26-03_18_17_0.mcap
rosbag2_2026_03_26-03_27_25/: metadata.yaml  rosbag2_2026_03_26-03_27_25_0.mcap
rosbag2_2026_03_26-03_39_29/: metadata.yaml  rosbag2_2026_03_26-03_39_29_0.mcap
rosbag2_2026_03_26-03_42_38/: metadata.yaml  rosbag2_2026_03_26-03_42_38_0.mcap
rosbag2_2026_03_26-03_54_26/: metadata.yaml  rosbag2_2026_03_26-03_54_26_0.mcap
rosbag2_2026_03_26-03_56_36/: metadata.yaml  rosbag2_2026_03_26-03_56_36_0.mcap
rosbag2_2026_03_26-04_09_40/: metadata.yaml  rosbag2_2026_03_26-04_09_40_0.mcap
rosbag2_2026_03_26-04_13_56/: metadata.yaml  rosbag2_2026_03_26-04_13_56_0.mcap
rosbag2_2026_03_26-22_34_42/: metadata.yaml  rosbag2_2026_03_26-22_34_42_0.mcap
rosbag2_2026_03_26-22_35_57/: metadata.yaml  rosbag2_2026_03_26-22_35_57_0.mcap
src/trossen_arm/docs/: changelog.rst  downloads.rst  index.rst  service.rst  tutorials.rst
src/trossen_arm/docs/getting_started/: software_setup.rst
src/trossen_arm/docs/tutorials/: trossen_data_collection_ui.rst
src/trossen_arm/docs/tutorials/lerobot/: configuration.rst  record_episode.rst
src/trossen_arm_description/: package.xml
src/trossen_arm_description/launch/: display.launch.py
src/trossen_arm_description/urdf/: mobile_ai.urdf.xacro
src/trossen_arm_description/urdf/macros/: _wxai.ros2_control.xacro  _wxai.urdf.xacro
src/trossen_arm_ros/: README.md  dependencies.repos
src/trossen_arm_ros/.github/workflows/: humble.yml  jazzy.yml
src/trossen_arm_ros/ball_detection_ros/: CMakeLists.txt  package.xml
src/trossen_arm_ros/ball_detection_ros/ball_detection_ros/: ball_model.py  ball_state_estimator.py  core.py  rgb_capture_core.py
src/trossen_arm_ros/ball_detection_ros/launch/: ball_position.launch.py  ball_rgb_debug.launch.py
src/trossen_arm_ros/ball_detection_ros/scripts/: ball_position_node.py  ball_rgb_capture_node.py  d405_calibration_snapshot.py
src/trossen_arm_ros/ball_state_msgs/: CMakeLists.txt  package.xml
src/trossen_arm_ros/ball_state_msgs/msg/: BallState.msg
src/trossen_arm_ros/mobile_aloha_camera/: CMakeLists.txt  package.xml
src/trossen_arm_ros/mobile_aloha_camera/config/: camera_serials.yaml  flir_dual_camera.yaml
src/trossen_arm_ros/mobile_aloha_camera/launch/: d405_color.launch.py  flir_camera.launch.py  flir_dual_camera.launch.py
src/trossen_arm_ros/mobile_aloha_camera/scripts/: run_flir_dual.sh
src/trossen_arm_ros/mpc_msgs/: CMakeLists.txt  package.xml
src/trossen_arm_ros/mpc_msgs/msg/: MpcStep.msg
src/trossen_arm_ros/mpc_ros/: CMakeLists.txt  package.xml
src/trossen_arm_ros/mpc_ros/launch/: mpc.launch.py
src/trossen_arm_ros/mpc_ros/mpc_ros/: __init__.py  arm_model.py  ball_model.py  common.py  nodes.py
src/trossen_arm_ros/mpc_ros/scripts/: ball_prediction_node.py  mpc_node.py
src/trossen_arm_ros/physics_utils/: CMakeLists.txt  package.xml
src/trossen_arm_ros/physics_utils/physics_utils/: __init__.py  ball_model.py  common.py  ocp.py
src/trossen_arm_ros/trossen_arm_bringup/: CMakeLists.txt  package.xml
src/trossen_arm_ros/trossen_arm_bringup/config/: camera_serials.yaml  controllers.yaml  dual_arm_controllers.yaml  flir_dual_camera.yaml  gravity_compensation.yaml  mobile_ai_controllers.yaml
src/trossen_arm_ros/trossen_arm_bringup/demos/: controllers.py  dual_arm_demo.py  single_arm_demo.py
src/trossen_arm_ros/trossen_arm_bringup/launch/: dual_trossen_arm.launch.py  flir_camera.launch.py  flir_dual_camera.launch.py  gravity_compensation.launch.py  mobile_ai.launch.py  trossen_arm.launch.py
src/trossen_arm_ros/trossen_arm_bringup/rviz/: dual_arm.rviz
src/trossen_arm_ros/trossen_arm_bringup/scripts/: run_flir_dual.sh
src/trossen_arm_ros/trossen_arm_controllers/: CMakeLists.txt  package.xml  trossen_arm_controllers.xml
src/trossen_arm_ros/trossen_arm_controllers/include/trossen_arm_controllers/: gravity_compensation.hpp
src/trossen_arm_ros/trossen_arm_controllers/src/: gravity_compensation.cpp
src/trossen_arm_ros/trossen_arm_hardware/: CMakeLists.txt  package.xml  trossen_arm_hardware.xml
src/trossen_arm_ros/trossen_arm_hardware/include/trossen_arm_hardware/: interface.hpp
src/trossen_arm_ros/trossen_arm_hardware/src/: interface.cpp
src/trossen_arm_ros/trossen_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/trossen_arm_ros/trossen_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  wxai.srdf.xacro  wxai.urdf.xacro
src/trossen_arm_ros/trossen_arm_moveit/launch/: moveit.launch.py
src/trossen_arm_ros/trossen_arm_ros/: CMakeLists.txt  package.xml
