<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_aloha_camera</name>
  <version>1.0.0</version>
  <description>FLIR dual camera launch and config for mobile ALOHA ping-pong (720×540 @ 200 Hz)</description>

  <maintainer email="trsupport@trossenrobotics.com">Trossen Robotics</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>spinnaker_camera_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
