<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trossen_arm_bringup</name>
  <version>1.0.0</version>
  <description>Configurations for using Trossen Arm hardware with ros2_control</description>

  <maintainer email="trsupport@trossenrobotics.com">Trossen Robotics</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>launch_ros</depend>
  <depend>launch</depend>
  <depend>parallel_gripper_controller</depend>
  <depend>trossen_arm_description</depend>
  <depend>trossen_arm_hardware</depend>
  <depend>xacro</depend>

  <exec_depend>flir_camera_description</exec_depend>
  <exec_depend>spinnaker_camera_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
